# PDF-Translator

./: .gitignore  License  README.FA.md  README.md  config.ini  main.py  pyproject.toml
translated_documents/: Test_translated_English_to_Farsi.docx  Test_translated_to_Farsi.docx
